lang/tests/compile_fail/multiple_init_contributors.stderr
error: only one init contributor group is allowed per field (e.g., `token(...)` or `associated_token(...)`, not both)
  --> tests/compile_fail/multiple_init_contributors.rs:14:5
   |
14 | /     #[account(mut,
15 | |         init, payer = payer,
16 | |         token(mint = mint, authority = payer, token_program = token_program),
17 | |         associated_token(mint = mint, authority = payer, token_program = token_program,
18 | |             system_program = system_program, ata_program = ata_program),
19 | |     )]
20 | |     pub vault: Account<Token>,
   | |_____________________________^

error[E0432]: unresolved import `quasar_spl`
 --> tests/compile_fail/multiple_init_contributors.rs:3:5
  |
3 | use quasar_spl::{
  |     ^^^^^^^^^^ use of unresolved module or unlinked crate `quasar_spl`
  |
  = help: if you wanted to use a crate named `quasar_spl`, use `cargo add quasar_spl` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `quasar_spl`
  --> tests/compile_fail/multiple_init_contributors.rs:21:23
   |
21 |     pub mint: Account<quasar_spl::Mint>,
   |                       ^^^^^^^^^^ use of unresolved module or unlinked crate `quasar_spl`
   |
   = help: if you wanted to use a crate named `quasar_spl`, use `cargo add quasar_spl` to add it to your `Cargo.toml`
